--- a/angular.json
+++ b/angular.json
@@ -136,7 +136,8 @@
   "cli": {
     "schematicCollections": [
       "@ionic/angular-toolkit"
-    ]
+    ],
+    "analytics": "ca9e1b7c-8d4f-4785-a300-76ff179f11ed"
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
