--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@capacitor/android": "^5.0.3",
+    "@capacitor/angular": "^2.0.3",
     "@capacitor/app": "5.0.2",
     "@capacitor/core": "5.0.3",
     "@capacitor/haptics": "5.0.2",
     "@capacitor/keyboard": "5.0.2",
+    "@capacitor/preferences": "^5.0.2",
     "@capacitor/status-bar": "5.0.2",
     "@ionic/angular": "^7.0.0",
     "axios": "^1.4.0",
@@ -40,10 +43,11 @@
     "@angular-eslint/eslint-plugin-template": "^16.0.0",
     "@angular-eslint/schematics": "^16.0.0",
     "@angular-eslint/template-parser": "^16.0.0",
-    "@angular/cli": "^16.0.0",
+    "@angular/cli": "^16.0.2",
     "@angular/compiler": "^16.0.0",
     "@angular/compiler-cli": "^16.0.0",
     "@angular/language-service": "^16.0.0",
+    "@capacitor/assets": "^2.0.4",
     "@capacitor/cli": "5.0.3",
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~4.3.0",
